Update loss from logloss to Cross Entropy loss

--- a/Code/Self/[2] notebook-run-kaggle-noBERT.ipynb
+++ b/Code/Self/[2] notebook-run-kaggle-noBERT.ipynb
@@ -389,7 +389,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.manifold import TSNE\n",
-    "from sklearn.metrics import roc_auc_score, accuracy_score, precision_score, recall_score, f1_score, log_loss\n",
+    "from sklearn.metrics import roc_auc_score, accuracy_score, precision_score, recall_score, f1_score, log_loss, hinge_loss\n",
     "from datasets import load_dataset, Dataset\n",
     "from transformers import AutoTokenizer, TFAutoModelForSequenceClassification, DataCollatorWithPadding, AutoModelForSequenceClassification, TrainingArguments, Trainer\n",
     "from gensim.models import KeyedVectors\n",
@@ -676,6 +676,13 @@
     "\n",
     "    print(f\"Plot saved to: {plot_path}\")\n",
     "\n",
+    "# Custom function to calculate binary cross-entropy loss\n",
+    "def binary_cross_entropy_loss(y_true, y_pred):\n",
+    "    epsilon = 1e-15  # Small constant to avoid log(0)\n",
+    "    y_pred = np.clip(y_pred, epsilon, 1 - epsilon)  # Clip predictions to avoid issues with log(0)\n",
+    "    loss = -np.mean(y_true * np.log(y_pred) + (1 - y_true) * np.log(1 - y_pred))\n",
+    "    return loss\n",
+    "\n",
     "def test_model(X_test_embeddings, y_test, model_file_path):\n",
     "    # Load the trained model\n",
     "    model = joblib.load(model_file_path)\n",
@@ -684,7 +691,7 @@
     "    preds_test = model.predict_proba(X_test_embeddings)[:, 1]\n",
     "    \n",
     "    # Compute test metrics\n",
-    "    test_loss = log_loss(y_test, preds_test)\n",
+    "    test_loss = binary_cross_entropy_loss(y_test, preds_test)\n",
     "    test_metrics = compute_metrics(preds_test, y_test)\n",
     "\n",
     "    # Log test metrics\n",
@@ -701,34 +708,46 @@
     "    # Return all test metrics\n",
     "    return {\"loss\": test_loss, **test_metrics}\n",
     "\n",
-    "def test_linearsvc(X_test_embeddings, y_test, model_file_path):\n",
+    "def test_linearsvc(X_test_embeddings, y_test, model_file_path): \n",
     "    # Load the trained model\n",
     "    model = joblib.load(model_file_path)\n",
     "    \n",
     "    # Predict decision function values (not probabilities) for the test set\n",
     "    preds_test = model.decision_function(X_test_embeddings)\n",
     "\n",
-    "    # Since LinearSVC doesn't output probabilities, you can use the decision function output directly\n",
-    "    # Compute the test loss using log loss (note: log_loss usually expects probabilities, but here we use decision values)\n",
-    "    # You might want to threshold or normalize preds_test before passing it to log_loss\n",
-    "    test_loss = log_loss(y_test, preds_test, labels=np.unique(y_test))  # Ensure labels are passed to handle binary classification\n",
+    "    # Calculate hinge loss (suitable for SVM-based models like LinearSVC)\n",
+    "    test_loss = hinge_loss(y_test, preds_test)\n",
+    "    \n",
+    "    # Convert decision function values to binary predictions (-1, 1 -> 0, 1)\n",
+    "    preds_test_binary = (preds_test > 0).astype(int)\n",
     "\n",
     "    # Compute test metrics\n",
-    "    test_metrics = compute_metrics(preds_test, y_test)\n",
+    "    test_accuracy = accuracy_score(y_test, preds_test_binary)\n",
+    "    test_precision = precision_score(y_test, preds_test_binary)\n",
+    "    test_recall = recall_score(y_test, preds_test_binary)\n",
+    "    test_f1 = f1_score(y_test, preds_test_binary)\n",
+    "    test_roc_auc = roc_auc_score(y_test, preds_test_binary)\n",
     "\n",
     "    # Log test metrics\n",
     "    logger.log_message(\"Testing Results:\")\n",
-    "    logger.log_message(f\"Test Loss: {test_loss:.4f}, Test Accuracy: {test_metrics['accuracy']:.4f}, \")\n",
-    "    logger.log_message(f\"Test ROC AUC: {test_metrics['roc_auc']:.4f}, Precision: {test_metrics['precision']:.4f}, \")\n",
-    "    logger.log_message(f\"Recall: {test_metrics['recall']:.4f}, F1: {test_metrics['f1']:.4f}\")\n",
+    "    logger.log_message(f\"Test Loss (Hinge Loss): {test_loss:.4f}, Test Accuracy: {test_accuracy:.4f}, \")\n",
+    "    logger.log_message(f\"Test ROC AUC: {test_roc_auc:.4f}, Precision: {test_precision:.4f}, \")\n",
+    "    logger.log_message(f\"Recall: {test_recall:.4f}, F1: {test_f1:.4f}\")\n",
     "    \n",
     "    # Print test metrics for console\n",
-    "    print(f\"Test Loss: {test_loss:.4f}, Test Accuracy: {test_metrics['accuracy']:.4f}, \"\n",
-    "          f\"Test ROC AUC: {test_metrics['roc_auc']:.4f}, Precision: {test_metrics['precision']:.4f}, \"\n",
-    "          f\"Recall: {test_metrics['recall']:.4f}, F1: {test_metrics['f1']:.4f}\")\n",
+    "    print(f\"Test Loss (Hinge Loss): {test_loss:.4f}, Test Accuracy: {test_accuracy:.4f}, \"\n",
+    "          f\"Test ROC AUC: {test_roc_auc:.4f}, Precision: {test_precision:.4f}, \"\n",
+    "          f\"Recall: {test_recall:.4f}, F1: {test_f1:.4f}\")\n",
     "    \n",
     "    # Return all test metrics\n",
-    "    return {\"loss\": test_loss, **test_metrics}\n",
+    "    return {\n",
+    "        \"loss\": test_loss,\n",
+    "        \"accuracy\": test_accuracy,\n",
+    "        \"precision\": test_precision,\n",
+    "        \"recall\": test_recall,\n",
+    "        \"f1\": test_f1,\n",
+    "        \"roc_auc\": test_roc_auc\n",
+    "    }\n",
     "\n",
     "def test_rnn(X_test, y_test, model_file_path):\n",
     "    \"\"\"\n",
@@ -851,25 +870,24 @@
     "                model.fit(X_batch, y_batch)\n",
     "\n",
     "            # After training on batches, validate\n",
-    "            preds_train = model.predict_proba(X_train_embeddings)[:, 1]\n",
+    "            preds_train = model.predict_proba(X_train_embeddings)[:, 1]  # Probability of positive class\n",
     "            preds_val = model.predict_proba(X_val_embeddings)[:, 1]\n",
     "\n",
-    "            # Compute training metrics\n",
-    "            train_loss = log_loss(y_train, preds_train)\n",
+    "            # Compute training loss using binary cross-entropy\n",
+    "            train_loss = binary_cross_entropy_loss(y_train, preds_train)\n",
     "            train_metrics_epoch = compute_metrics(preds_train, y_train)\n",
     "            train_metrics['loss'].append(train_loss)\n",
     "            for key, value in train_metrics_epoch.items():\n",
     "                train_metrics[key].append(value)\n",
     "\n",
-    "            # Compute validation metrics\n",
-    "            val_loss = log_loss(y_val, preds_val)\n",
+    "            # Compute validation metrics and loss using binary cross-entropy\n",
+    "            val_loss = binary_cross_entropy_loss(y_val, preds_val)\n",
     "            val_metrics_epoch = compute_metrics(preds_val, y_val)\n",
     "            val_metrics['loss'].append(val_loss)\n",
     "            for key, value in val_metrics_epoch.items():\n",
     "                val_metrics[key].append(value)\n",
     "\n",
     "            # Print metrics for the epoch\n",
-    "            # logger.log_message(f\"Epoch {epoch + 1}/{n_epochs}\")\n",
     "            logger.log_message(f\"Train Loss: {train_loss:.4f}, Train Accuracy: {train_metrics_epoch['accuracy']:.4f}, \")\n",
     "            logger.log_message(f\"Train ROC AUC: {train_metrics_epoch['roc_auc']:.4f}, Precision: {train_metrics_epoch['precision']:.4f}, \")\n",
     "            logger.log_message(f\"Recall: {train_metrics_epoch['recall']:.4f}, F1: {train_metrics_epoch['f1']:.4f}\")\n",
@@ -890,6 +908,71 @@
     "        plot_training_validation_curves(train_metrics, val_metrics, out_base_path, \"LogisticRegressionAnalysis.png\")\n",
     "\n",
     "    return model\n",
+    "\n",
+    "# def train_logistic_regression(X_train_embeddings, y_train, X_val_embeddings, y_val, model_file_path, out_base_path, n_epochs=20, batch_size=32):\n",
+    "#     logger.log_message(f\"Training a Logistic Regression model for {n_epochs} epochs...\")\n",
+    "\n",
+    "#     if os.path.exists(model_file_path):\n",
+    "#         print(\"Loading model from file...\")\n",
+    "#         model = joblib.load(model_file_path)\n",
+    "#     else:\n",
+    "#         print(\"Model not found. Training a new model...\")\n",
+    "#         model = LogisticRegression(max_iter=246, C=0.01, class_weight='balanced')\n",
+    "\n",
+    "#         train_metrics = {'accuracy': [], 'loss': [], 'roc_auc': [], 'precision': [], 'recall': [], 'f1': []}\n",
+    "#         val_metrics = {'accuracy': [], 'loss': [], 'roc_auc': [], 'precision': [], 'recall': [], 'f1': []}\n",
+    "\n",
+    "#         # Loop over epochs\n",
+    "#         for epoch in tqdm(range(n_epochs), desc=\"Epochs\", unit=\"epoch\"):\n",
+    "#             logger.log_message(f\"Epoch {epoch + 1}/{n_epochs} - Shuffling and batching data\")\n",
+    "\n",
+    "#             # Shuffle and split data into batches\n",
+    "#             X_train_batches, y_train_batches = shuffle_and_split(X_train_embeddings, y_train, batch_size)\n",
+    "\n",
+    "#             # Train model on each batch\n",
+    "#             for X_batch, y_batch in zip(X_train_batches, y_train_batches):\n",
+    "#                 model.fit(X_batch, y_batch)\n",
+    "\n",
+    "#             # After training on batches, validate\n",
+    "#             preds_train = model.predict_proba(X_train_embeddings)[:, 1]\n",
+    "#             preds_val = model.predict_proba(X_val_embeddings)[:, 1]\n",
+    "\n",
+    "#             # Compute training metrics\n",
+    "#             train_loss = log_loss(y_train, preds_train)\n",
+    "#             train_metrics_epoch = compute_metrics(preds_train, y_train)\n",
+    "#             train_metrics['loss'].append(train_loss)\n",
+    "#             for key, value in train_metrics_epoch.items():\n",
+    "#                 train_metrics[key].append(value)\n",
+    "\n",
+    "#             # Compute validation metrics\n",
+    "#             val_loss = log_loss(y_val, preds_val)\n",
+    "#             val_metrics_epoch = compute_metrics(preds_val, y_val)\n",
+    "#             val_metrics['loss'].append(val_loss)\n",
+    "#             for key, value in val_metrics_epoch.items():\n",
+    "#                 val_metrics[key].append(value)\n",
+    "\n",
+    "#             # Print metrics for the epoch\n",
+    "#             # logger.log_message(f\"Epoch {epoch + 1}/{n_epochs}\")\n",
+    "#             logger.log_message(f\"Train Loss: {train_loss:.4f}, Train Accuracy: {train_metrics_epoch['accuracy']:.4f}, \")\n",
+    "#             logger.log_message(f\"Train ROC AUC: {train_metrics_epoch['roc_auc']:.4f}, Precision: {train_metrics_epoch['precision']:.4f}, \")\n",
+    "#             logger.log_message(f\"Recall: {train_metrics_epoch['recall']:.4f}, F1: {train_metrics_epoch['f1']:.4f}\")\n",
+    "            \n",
+    "#             print(f\"Epoch {epoch + 1}/{n_epochs}\")\n",
+    "#             print(f\"Train Loss: {train_loss:.4f}, Train Accuracy: {train_metrics_epoch['accuracy']:.4f}, \"\n",
+    "#                   f\"Train ROC AUC: {train_metrics_epoch['roc_auc']:.4f}, Precision: {train_metrics_epoch['precision']:.4f}, \"\n",
+    "#                   f\"Recall: {train_metrics_epoch['recall']:.4f}, F1: {train_metrics_epoch['f1']:.4f}\")\n",
+    "#             print(f\"Val Loss: {val_loss:.4f}, Val Accuracy: {val_metrics_epoch['accuracy']:.4f}, \"\n",
+    "#                   f\"Val ROC AUC: {val_metrics_epoch['roc_auc']:.4f}, Precision: {val_metrics_epoch['precision']:.4f}, \"\n",
+    "#                   f\"Recall: {val_metrics_epoch['recall']:.4f}, F1: {val_metrics_epoch['f1']:.4f}\")\n",
+    "\n",
+    "#         # Save the trained model\n",
+    "#         joblib.dump(model, model_file_path)\n",
+    "#         print(f\"Model saved to {model_file_path}\")\n",
+    "\n",
+    "#         # Plot accuracy and loss curves\n",
+    "#         plot_training_validation_curves(train_metrics, val_metrics, out_base_path, \"LogisticRegressionAnalysis.png\")\n",
+    "\n",
+    "#     return model\n",
     "\n",
     "#######\n",
     "def train_xgboost(X_train_embeddings, y_train, X_val_embeddings, y_val, model_file_path, out_base_path, n_epochs=20, batch_size=32):\n",
@@ -922,14 +1005,14 @@
     "            preds_val = model.predict_proba(X_val_embeddings)[:, 1]\n",
     "\n",
     "            # Compute training metrics\n",
-    "            train_loss = log_loss(y_train, preds_train)\n",
+    "            train_loss = binary_cross_entropy_loss(y_train, preds_train)\n",
     "            train_metrics_epoch = compute_metrics(preds_train, y_train)\n",
     "            train_metrics['loss'].append(train_loss)\n",
     "            for key, value in train_metrics_epoch.items():\n",
     "                train_metrics[key].append(value)\n",
     "\n",
     "            # Compute validation metrics\n",
-    "            val_loss = log_loss(y_val, preds_val)\n",
+    "            val_loss = binary_cross_entropy_loss(y_val, preds_val)\n",
     "            val_metrics_epoch = compute_metrics(preds_val, y_val)\n",
     "            val_metrics['loss'].append(val_loss)\n",
     "            for key, value in val_metrics_epoch.items():\n",
@@ -990,14 +1073,14 @@
     "            preds_val = model.predict_proba(X_val_embeddings)[:, 1]\n",
     "\n",
     "            # Compute training metrics\n",
-    "            train_loss = log_loss(y_train, preds_train)\n",
+    "            train_loss = binary_cross_entropy_loss(y_train, preds_train)\n",
     "            train_metrics_epoch = compute_metrics(preds_train, y_train)\n",
     "            train_metrics['loss'].append(train_loss)\n",
     "            for key, value in train_metrics_epoch.items():\n",
     "                train_metrics[key].append(value)\n",
     "\n",
     "            # Compute validation metrics\n",
-    "            val_loss = log_loss(y_val, preds_val)\n",
+    "            val_loss = binary_cross_entropy_loss(y_val, preds_val)\n",
     "            val_metrics_epoch = compute_metrics(preds_val, y_val)\n",
     "            val_metrics['loss'].append(val_loss)\n",
     "            for key, value in val_metrics_epoch.items():\n",
@@ -1057,14 +1140,14 @@
     "            preds_val = model.decision_function(X_val_embeddings)\n",
     "\n",
     "            # Compute training metrics\n",
-    "            train_loss = log_loss(y_train, preds_train)\n",
+    "            train_loss = hinge_loss(y_train, preds_train)\n",
     "            train_metrics_epoch = compute_metrics(preds_train, y_train)\n",
     "            train_metrics['loss'].append(train_loss)\n",
     "            for key, value in train_metrics_epoch.items():\n",
     "                train_metrics[key].append(value)\n",
     "\n",
     "            # Compute validation metrics\n",
-    "            val_loss = log_loss(y_val, preds_val)\n",
+    "            val_loss = hinge_loss(y_val, preds_val)\n",
     "            val_metrics_epoch = compute_metrics(preds_val, y_val)\n",
     "            val_metrics['loss'].append(val_loss)\n",
     "            for key, value in val_metrics_epoch.items():\n",
@@ -3248,6 +3331,13 @@
     "    print(f'Training set size: {len(train_essays)}')\n",
     "    print(f'Validation set size: {len(val_essays)}')\n",
     "    print(f'Test set size: {len(test_essays)}')\n",
+    "    \n",
+    "    logger.log_message(f'Full set size: {len(df_ds)}')\n",
+    "    logger.log_message(f'Training set size: {len(train_essays)}')\n",
+    "    logger.log_message(f'Validation set size: {len(val_essays)}')\n",
+    "    logger.log_message(f'Test set size: {len(test_essays)}')\n",
+    "    \n",
+    "    # logger.log_message(f\"Finished processing (total) in {t_hours} hours, {t_minutes} minutes, {t_seconds} seconds\")     \n",
     "\n",
     "    # ============================================================================================\n",
     "    # Load the glove model\n",
@@ -3271,6 +3361,8 @@
     "    \n",
     "    X_test_embeddings = np.array([sent2vec(sent, glove_model) for sent in X_test])\n",
     "    # ============================================================================================\n",
+    "    \n",
+    "    logger.log_message(\"============================================================================================\")\n",
     "\n",
     "    # Train the Logistic Regression model using the train and validation sets\n",
     "    logistic_model_file_path = os.path.join(out_base_path, 'logistic_regression_model.pkl')\n",
@@ -3280,6 +3372,8 @@
     "    print(\"Testing Logistic Regression Model\")\n",
     "    test_model(X_test_embeddings, y_test, logistic_model_file_path)\n",
     "    # ============================================================================================\n",
+    "    \n",
+    "    logger.log_message(\"============================================================================================\")\n",
     "\n",
     "    # Train the XGBoost model using the train and validation sets\n",
     "    xgboost_model_file_path = os.path.join(out_base_path, 'xgboost_model.pkl')\n",
@@ -3289,6 +3383,8 @@
     "    print(\"Testing XGBoost Model\")\n",
     "    test_model(X_test_embeddings, y_test, xgboost_model_file_path)\n",
     "    # ============================================================================================\n",
+    "    \n",
+    "    logger.log_message(\"============================================================================================\")\n",
     "    \n",
     "    # Train the Random Forest model using the train and validation sets\n",
     "    randomforest_model_file_path = os.path.join(out_base_path, 'randomforest_model.pkl')\n",
@@ -3301,6 +3397,8 @@
     "    \n",
     "    # ============================================================================================\n",
     "    \n",
+    "    logger.log_message(\"============================================================================================\")\n",
+    "    \n",
     "    # Train the Linear SVC model using the train and validation sets\n",
     "    linear_svc_model_file_path = os.path.join(out_base_path, 'linearsvc_model.pkl')\n",
     "    train_linear_svc(X_train_embeddings, y_train, X_val_embeddings, y_val, linear_svc_model_file_path, out_base_path)\n",
@@ -3308,9 +3406,12 @@
     "    # Test the Linear SVC model on the test set\n",
     "    print(\"Testing linear SVC Model\")\n",
     "    test_linearsvc(X_test_embeddings, y_test, linear_svc_model_file_path)\n",
-    "    \n",
+    "\n",
     "    \n",
     "    # ============================================================================================\n",
+    "    \n",
+    "    logger.log_message(\"============================================================================================\")\n",
+    "    \n",
     "    # Train the Bidirectional LSTM RNN model using the train and validation sets\n",
     "    rnn_model_file_path = os.path.join(out_base_path, 'tf_lstm_rnn.keras')\n",
     "    rnn_plot_file_path = os.path.join(out_base_path, 'tf_lstm_rnn.png')\n",
