Add models and images

--- a/Code/Self/[1] data_preprocessing copy.ipynb
+++ b/Code/Self/[1] data_preprocessing copy.ipynb
@@ -1160,6 +1160,94 @@
     "\n",
     "print(f\"Cleaned dataset exported to {cleaned_file_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>source</th>\n",
+       "      <th>processed_text</th>\n",
+       "      <th>processed_text_swr</th>\n",
+       "      <th>word_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>66981</th>\n",
+       "      <td>I believe that children should be taught to compete, but only if it is in a healthy and fun way. I think that children should be taught to cooperate in order to be successful in life. I have seen many examples of children who have been successful in life because they have been able to work together. I have also seen many examples of children who have been successful in life because they have been able to learn to compete. I think that children should be taught to compete in a healthy and fun way, so that they can learn to be successful in life.\\n\\n</td>\n",
+       "      <td>1</td>\n",
+       "      <td>personal-sunilthite</td>\n",
+       "      <td>i believe that children should be taught to compete but only if it is in a healthy and fun way i think that children should be taught to cooperate in order to be successful in life i have seen many examples of children who have been successful in life because they have been able to work together i have also seen many examples of children who have been successful in life because they have been able to learn to compete i think that children should be taught to compete in a healthy and fun way so that they can learn to be successful in life</td>\n",
+       "      <td>believe children taught compete healthy fun way think children taught cooperate order successful life seen many examples children successful life able work together also seen many examples children successful life able learn compete think children taught compete healthy fun way learn successful life</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70600</th>\n",
+       "      <td>Since Humans exist, one point has always been discussed: advantages and disadvantages to be young or old. The advantages of being young are that you have more time to learn and grow, and you are less likely to get hurt. On the other hand, there are disadvantages of old age, such as being unable to do as much as you used to, or having to wait for someone else to take care of you.\\n\\nWhat do you think is the most important reason why people choose to live as long as they do? To be able to pass on their knowledge and experience to the next generation.\\n\\n</td>\n",
+       "      <td>1</td>\n",
+       "      <td>personal-sunilthite</td>\n",
+       "      <td>since humans exist one point has always been discussed advantages and disadvantages to be young or old the advantages of being young are that you have more time to learn and grow and you are less likely to get hurt on the other hand there are disadvantages of old age such as being unable to do as much as you used to or having to wait for someone else to take care of you what do you think is the most important reason why people choose to live as long as they do to be able to pass on their knowledge and experience to the next generation</td>\n",
+       "      <td>since humans exist one point always discussed advantages disadvantages young old advantages young time learn grow less likely get hurt hand disadvantages old age unable much used wait someone else take care think important reason people choose live long able pass knowledge experience next generation</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 text  \\\n",
+       "66981      I believe that children should be taught to compete, but only if it is in a healthy and fun way. I think that children should be taught to cooperate in order to be successful in life. I have seen many examples of children who have been successful in life because they have been able to work together. I have also seen many examples of children who have been successful in life because they have been able to learn to compete. I think that children should be taught to compete in a healthy and fun way, so that they can learn to be successful in life.\\n\\n   \n",
+       "70600  Since Humans exist, one point has always been discussed: advantages and disadvantages to be young or old. The advantages of being young are that you have more time to learn and grow, and you are less likely to get hurt. On the other hand, there are disadvantages of old age, such as being unable to do as much as you used to, or having to wait for someone else to take care of you.\\n\\nWhat do you think is the most important reason why people choose to live as long as they do? To be able to pass on their knowledge and experience to the next generation.\\n\\n   \n",
+       "\n",
+       "       label               source  \\\n",
+       "66981      1  personal-sunilthite   \n",
+       "70600      1  personal-sunilthite   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        processed_text  \\\n",
+       "66981  i believe that children should be taught to compete but only if it is in a healthy and fun way i think that children should be taught to cooperate in order to be successful in life i have seen many examples of children who have been successful in life because they have been able to work together i have also seen many examples of children who have been successful in life because they have been able to learn to compete i think that children should be taught to compete in a healthy and fun way so that they can learn to be successful in life   \n",
+       "70600     since humans exist one point has always been discussed advantages and disadvantages to be young or old the advantages of being young are that you have more time to learn and grow and you are less likely to get hurt on the other hand there are disadvantages of old age such as being unable to do as much as you used to or having to wait for someone else to take care of you what do you think is the most important reason why people choose to live as long as they do to be able to pass on their knowledge and experience to the next generation   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                                 processed_text_swr  \\\n",
+       "66981  believe children taught compete healthy fun way think children taught cooperate order successful life seen many examples children successful life able work together also seen many examples children successful life able learn compete think children taught compete healthy fun way learn successful life   \n",
+       "70600  since humans exist one point always discussed advantages disadvantages young old advantages young time learn grow less likely get hurt hand disadvantages old age unable much used wait someone else take care think important reason people choose live long able pass knowledge experience next generation   \n",
+       "\n",
+       "       word_length  \n",
+       "66981          300  \n",
+       "70600          300  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_half_final[df_half_final[\"word_length\"] == 300]"
+   ]
   }
  ],
  "metadata": {
